successfully added in my own line wrapping function